# RAG-Chatbot

./: README.md  pyproject.toml  requirement.txt
src/: app.py  rag_core.py  styles.css
